Slightly smaller font for code samples to prevent annoying wrapping.

--- a/themes/casper-msavy/assets/css/screen.css
+++ b/themes/casper-msavy/assets/css/screen.css
@@ -363,7 +363,7 @@ pre {
 }
 
 pre code, pre tt {
-    font-size: inherit;
+    font-size: 1.5rem;
     white-space: pre-wrap;
     background: transparent;
     border: none;
